# Soft-Dev

./: README.md  names.txt
Artificially Intelligent Models/: deep_deterministic_policy_gradient.py  evolution_strategies_and_genetic_algorithms.py  nlp_chatbots.py  reinforcement_learning_ppo.py  time_series_analysis.py
AssignmentSubmission/: HELP.md  pom.xml
Bulldozer Price Regression/: predictions.csv
CS221-Probability & Statistics/: 2103319_Assignment_4_Question-6.ipynb  2103319_Assignment_4_Question-7.ipynb
CT-MRI/: CT-MRI.py
CodeForces/: AngryMonk.java  EqualSumSubarrays.java  EvenPositions.java  Fun.java  GorillaAndPermutations.java  KDistinctCentres.java  Legs.java  LevelUp.java  LightSwitches.java  MakeThreeRegions.java  MaximiseScore.java  MaximiseTheRoot.java  Medimise.java  NovicesMistake.java  OnlyPluses.java  ParityAndSum.java  QuestionMarks.java  RemovalsGame.java  Scale.java  Sort.java  StrongPassword.java  Template.java  TestOfLove.java  UltraMeow.java  ValuableCards.java
Lab Assignments/: Geometric_Random_Variable.py  Lab2.py  Lab3.py  Lab4.py  Lab5.py  Lab6.py  Lab7.py  Lab7_Promo.ipynb  LabAssignment2.py  LabAssignment3.ipynb  MeanSquaredLoss.py  Monty_Hall.py  RujulDwivedi_Question4.py  RujulDwivedi_Question5.py  RujulDwivedi_Question5d.py  RujulDwivedi_Question5f.py  RujulDwivedi_Question6c.py  RujulDwivedi_Question6d.py  SampleLab6.py  (+6 more)
Quant Models/: Fourier-Transform.ipynb  Option-Pricing.ipynb  pyproject.toml  setup.py
Quant Models/src/FMNM.egg-info/: PKG-INFO
Quant Models/src/FMNM/cython/: solvers.c  solvers.cp38-win_amd64.pyd
(+141 files in other folders)
